--- a/style.css
+++ b/style.css
@@ -1,73 +1,305 @@
-/* Background image for the body element */
+/* Background image and font style for the body element */
 body{
   background-image: -webkit-cross-fade(url("images/bg-pattern-top-desktop.svg"), url("images/bg-pattern-bottom-desktop.svg"), 25%);
   background-image: cross-fade(url("images/bg-pattern-top-desktop.svg"), url("images/bg-pattern-bottom-desktop.svg"), 25%);
-
+  font-size: 15px;
+  font-family: "League Spartan";
 }
 
-/* Styling for the first row which encompass the heading and rating */
+/* Styling for the desktop width*/
 
-.heading, .rating{
-  padding: 5% 5% 5% 5%;
+ @media (min-width: 1381px){
+
+  body{
+    background-image: -webkit-cross-fade(url("images/bg-pattern-top-desktop.svg"), url("images/bg-pattern-bottom-desktop.svg"), 25%);
+    background-image: cross-fade(url("images/bg-pattern-top-desktop.svg"), url("images/bg-pattern-bottom-desktop.svg"), 25%);
+
+  }
+
+  h1{
+    font-size: 40px;
+   }
+  
+  .heading{
+    padding: 4% 10% 1% 8%;
+    width: 550px;
+    height: 330px;
+  }
+  
+  .rating{
+    padding: 4% 5% 1% 12%;
+  }
+  .rate{
+    margin-bottom: 20px;
+    display: block;
+    width: 400px;
+    position: relative;
+  
+  }
+  
+  .rate-description{
+    display: inline;
+    padding-left: 25px;
+  }
+  
+  
+  .rating_2{
+    left: 45px;
+  }
+  
+  .rating_3{
+    left: 90px;
+  }
+  /* Styling for the review row */
+  
+  .review-section{
+    padding: 0% 5% 5% 7%;
+  }
+  
+  .review{
+    display: inline-block;
+    width: 350px;
+    height: 250px;
+    margin-left: 20px;
+    position: relative;
+  }
+  
+  .review_2{
+    top: 10px;
+  }
+  
+  .review_3{
+    top: 30px;
+  }
+  
+  .customer-img{
+    border-radius: 100%;
+    width: 50px;
+    float: left;
+    margin-right: 30px;
+  }
+  
+
+ }
+
+ /* Styling for the tablet width*/
+
+ @media (min-width:992px) and (max-width: 1380.99px){
+
+  body{
+    background-image: -webkit-cross-fade(url("images/bg-pattern-top-desktop.svg"), url("images/bg-pattern-bottom-desktop.svg"), 25%);
+    background-image: cross-fade(url("images/bg-pattern-top-desktop.svg"), url("images/bg-pattern-bottom-desktop.svg"), 25%);
+  }
+
+  h1{
+    font-size: 35px;
+
+   }
+
+  .heading{
+    padding: 4% 5% 1% 5%;
+    width: 400px;
+    height: 330px;
+  }
+  
+  .rating{
+    padding: 4% 5% 1% 10%;
+  }
+  .rate{
+    margin-bottom: 20px;
+    display: block;
+    width: 400px;
+    position: relative;
+  
+  }
+  
+  .rate-description{
+    display: inline;
+    padding-left: 25px;
+  }
+  
+  
+  .rating_2{
+    left: 20px;
+  }
+  
+  .rating_3{
+    left: 40px;
+  }
+  /* Styling for the review row */
+  
+  .review-section{
+    padding: 0% 5% 5% 3.3%;
+  }
+  
+  .review{
+    display: inline-flex;
+    width: 400px;
+    height: 250px;
+    margin-left: 20px;
+    margin-bottom: 20px;
+    position: relative;
+  }
+  
+  
+  .customer-img{
+    border-radius: 100%;
+    width: 50px;
+    float: left;
+    margin-right: 30px;
+  }
+ }
+
+ /* Styling for the mobile width*/
+ @media (max-width:991.99px){
+  body{
+    background-image: -webkit-cross-fade(url("images/bg-pattern-top-mobile.svg"), url("images/bg-pattern-bottom-mobile.svg"), 25%);
+    background-image: cross-fade(url("images/bg-pattern-top-mobile.svg"), url("images/bg-pattern-bottom-mobile.svg"), 25%);
+
+  }
+
+
+  h1{
+    font-size: 35px;
+   }
+
+   /* Used flexbox to align all the elements and cards */
+  .heading{
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: auto; 
+    justify-content: center; 
+    align-items: space-between;
+    margin-top: 50px;
+    margin-bottom: 30px;
+ 
+    
+    width: 350px;
+    height: 180px;
+    text-align: center;
+    padding-right: 30px;
+    padding-left: 30px;
+  
+  
+  }
+  
+
+  .rate{
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: auto; 
+    justify-content: center; 
+    align-items: space-between;
+
+    display: block;
+    width: 280px;
+    height: 70px;
+    
+    margin-bottom: 15px;
+  
+    text-align: center;
+  
+  }
+  
+  .rate-description{
+    display: block;
+   
+  }
+  .rating_3{
+    margin-bottom: 50px;
+  }
+  /* Styling for the review row */
+  
+  
+  .review{
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: auto; 
+    justify-content: center; 
+    align-items: space-between;
+
+    display: block;
+    width: 280px;
+    height: 70px;
+  
+    display: block;
+    width: 280px;
+    height: 230px;
+    margin-bottom: 20px;
+    
+   
+    
+  }
+  
+
+  /*Overall styling for all modes */
+ }
+
+ h1{
+  font-weight: 700;
+  line-height: 1.0;
+  color: hsl(300, 43%, 22%);
+
+ }
+
+ .subtitle{
+  color:  hsl(300, 43%, 22%);
+
+ }
+  
+ .customer-img{
+  border-radius: 100%;
+  width: 50px;
+  float: left;
+  margin-right: 20px;
 }
 
-.rate{
-  margin-bottom: 20px;
-  display: block;
-  width: 400px;
-
+.fa-star{
+  color: orange;
 }
 
 .rate-description{
-  display: inline;
-  padding-left: 25px;
+  font-weight: 700;
+  color:  hsl(300, 43%, 22%);
+
 }
 
-.rating_1{
-  position: relative;
+.rate{
+  border:none;
+  background-color: hsl(300, 24%, 96%);
 }
 
-.rating_2{
-  position: relative;
-  left: 35px;
+h2{
+  font-size: 20px;
+  margin: 0;
+  text-align: left;
+  color: hsl(300, 24%, 96%);
+
 }
 
-.rating_3{
-  position: relative;
-  left: 70px;
-}
-/* Styling for the review row */
+h3{
+  font-size: 18px;
+  text-align: left;
+  color: hsl(333, 80%, 67%);
 
-.review-section{
-  padding: 0% 5% 5% 5%;
 }
 
 .review{
-  display: inline-block;
-  width: 350px;
-  height: 300px;
-  margin-left: 20px;
+  padding-top: 20px;
+  background-color: hsl(300, 43%, 22%);
+ 
 }
+.testimonial{
+  margin-top: 30px;
+  color: hsl(0, 0%, 100%);
 
-.review_1{
-  position: relative;
 }
-
-.review_2{
-  position: relative;
-  top: 25px;
-}
-
-.review_3{
-  position: relative;
-  top: 50px;
-}
-
-
-
-
-
-
 /* footer */
 .attribution {
   font-size: 11px;
